crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__line_continue_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"'a' + \\\n'b'\n\"#)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: StringLit(
                    StringLit {
                        is_long_string: false,
                        raw_value: "'a'",
                        value: "a",
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 3,
            },
            op: Add,
            right: Node {
                node: StringLit(
                    StringLit {
                        is_long_string: false,
                        raw_value: "'b'",
                        value: "b",
                    },
                ),
                filename: "",
                line: 2,
                column: 0,
                end_line: 2,
                end_column: 3,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 2,
    end_column: 3,
}
