crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__list_recovery_12.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"[if True: **a, b]\")"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: ListIfItem(
                        ListIfItemExpr {
                            if_cond: Node {
                                node: NameConstantLit(
                                    NameConstantLit {
                                        value: True,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 4,
                                end_line: 1,
                                end_column: 8,
                            },
                            exprs: [
                                Node {
                                    node: Binary(
                                        BinaryExpr {
                                            left: Node {
                                                node: Missing(
                                                    MissingExpr,
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 10,
                                                end_line: 1,
                                                end_column: 12,
                                            },
                                            op: Pow,
                                            right: Node {
                                                node: Identifier(
                                                    Identifier {
                                                        names: [
                                                            Node {
                                                                node: "a",
                                                                filename: "",
                                                                line: 1,
                                                                column: 12,
                                                                end_line: 1,
                                                                end_column: 13,
                                                            },
                                                        ],
                                                        pkgpath: "",
                                                        ctx: Load,
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 12,
                                                end_line: 1,
                                                end_column: 13,
                                            },
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 10,
                                    end_line: 1,
                                    end_column: 13,
                                },
                            ],
                            orelse: None,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 13,
                },
                Node {
                    node: Identifier(
                        Identifier {
                            names: [
                                Node {
                                    node: "b",
                                    filename: "",
                                    line: 1,
                                    column: 15,
                                    end_line: 1,
                                    end_column: 16,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 15,
                    end_line: 1,
                    end_column: 16,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 17,
}
